--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 </head>
-<body>
+<body ng-app="pouchapp">
 
-  <div ng-view></div>
+  <div style="padding: 20px">
+    <div ui-view></div>
+  </div>
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
