--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
+  <script src="bower_components/pouchdb/dist/pouchdb.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
